--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "6.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start",
     "start": "node server/server.js",
     "start-dev": "nodemon server/server.js"
   },
@@ -30,10 +30,19 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "",
     "css-loader": "^0.28.2",
+    "expect": "^1.20.2",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "nodemon": "",
+    "react-addons-test-utils": "^0.14.7",
     "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
